tests/ui/infinite/infinite-assoc.stderr
error[E0425]: cannot find type `NOT_EXIST` in this scope
  --> $DIR/infinite-assoc.rs:12:30
   |
LL | struct A((A, <S as Trait>::T<NOT_EXIST?>));
   |                              ^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | struct A<NOT_EXIST>((A, <S as Trait>::T<NOT_EXIST?>));
   |         +++++++++++

error[E0107]: associated type takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/infinite-assoc.rs:12:28
   |
LL | struct A((A, <S as Trait>::T<NOT_EXIST?>));
   |                            ^------------ help: remove the unnecessary generics
   |                            |
   |                            expected 0 generic arguments
   |
note: associated type defined here, with 0 generic parameters
  --> $DIR/auxiliary/alias.rs:4:10
   |
LL |     type T;
   |          ^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0425.
For more information about an error, try `rustc --explain E0107`.
